start jd01_11